fix:scroll jump to 0 & fifth stage images

--- a/src/components/FourthStage.module.css
+++ b/src/components/FourthStage.module.css
@@ -60,6 +60,9 @@
   margin: auto 0;
   padding-top: 4rem;
 }
+.qoled_logo_wrapper {
+  height: 15%;
+}
 .left_side > * {
   height: fit-content;
   align-self: flex-start;
@@ -78,7 +81,9 @@
   padding: 1rem 1.2rem;
 }
 .qoled_logo {
-  width: 20%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
   align-self: flex-start;
 }
 .right_side_2 {
@@ -90,7 +95,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  gap: .5rem;
+  gap: 0.5rem;
   direction: rtl;
   color: white;
 }
@@ -120,7 +125,7 @@
   height: 100%;
   object-fit: contain;
 }
-.all_tvs{
+.all_tvs {
   position: fixed;
   bottom: 2%;
   left: 10%;
