--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,30 @@ body {
   box-sizing: border-box;
   max-width: 100vw;
   overflow-x: hidden;
+  scrollbar-width: 10px;
+  scrollbar-color: black;
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: pelak;
+  scroll-behavior: smooth;
 }
 a {
   text-decoration: none;
 }
 a:hover {
   text-decoration: none;
+}
+::-webkit-scrollbar {
+  width: 7px;
+  background-color: black;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(226, 226, 226);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
 }
